--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "admin-panel",
+  "homepage":"https://Ankit-Mohanta.github.io/Admin-dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tomik23/react-circular-progress-bar": "^1.1.1",
     "firebase": "^9.8.3",
+    "gh-pages": "^5.0.0",
     "react": "^18.1.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.1.0",
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
